# django-boilerplate

./: .directory  .gitignore  README.md  init.py  package-lock.json  package.json  pyproject.base.toml  pyproject.setuptools.toml  pyproject.toml  tsconfig.json  webpack.base.config.ts  webpack.dev.config.ts  webpack.prod.config.ts
assets/lib/: index-ed707797d9f37a11fcc1.js
assets/libdev/: index-0e96676ffbd0535bc92c.css  index-6bfbaaf5284fc471b1d9.js  index-6bfbaaf5284fc471b1d9.js.map
assets/ts/: index.ts
deployment/scripty/: build  watch
src/: asgi.py  settings.py  urls.py  wsgi.py
