[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "django-boilerplate"
authors = [
    {name = "Robert Huselius", email = "robert@huseli.us"},
]
description = "Django boilerplate"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "django",
    "python-dotenv",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ipdb",
    "ipython",
    "isort",
    "pylint",
    "flake8",
    "django-debug-toolbar",
]

[tool.setuptools.dynamic]
version = {attr = "__version__"}

[tool.pylint.main]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "broad-exception-caught",
    "too-many-branches",
    "import-outside-toplevel",
]
ignore = [".venv"]
max-line-length = 119

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 79
multi_line_output = 5
lines_after_imports = 2
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip = [".venv"]

[tool.mypy]
follow_imports = "skip"
show_error_codes = true
ignore_missing_imports = true
files = "."
check_untyped_defs = true
